--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1>Hi. This is Abdelmoughit EL QAOUS.</h1>
 				<p>I am a future <a href="http://ensias.um5.ac.ma/page/formation-ing%C3%A9nieur-0">Supply Chain and Logistics Engineer</a>
 				<br />
-				Currently a first year student @ <a href="http://ensias.um5.ac.ma/">ENSIAS.</a></p>
+				Currently a second year student @ <a href="http://ensias.um5.ac.ma/">ENSIAS.</a></p>
 			</div>
 
 		<!-- Main -->
