--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
 							<h3>IT</h3>
 							<p>As a responsible of the training and competitive programming cell, I honed my programming and problem-solving skills through training sessions and competitions, while collaborating with like-minded students and developing my teamwork abilities.</p>
 						</div>
+					<div class="box alt container">
+					<section class="feature left">
+						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<div class="content">
+							<h3>CINDH</h3>
+							<p>I am a responsible of tresorier, I have been honored to be part of this family where I've experienced a lot and depvelopped my volunteering skills.</p>
+							<br />
+						</div>
+					</section>
 					</section>
 					<!-- <section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
